# spaceman_core

datasets/episode_20260429_125511/: actions.npz  config.yaml  rgb_gripper.npz  rgb_static.npz  robot_obs.npz  scene_obs.npz
satellite_combine_panda/: satellite_combine_panda.urdf
src/RL/: train_satellite_side_grasp_ppo.py  train_satellite_side_grasp_ppo_cpu_backup.py
src/assets/urdf/starlink_space_manipulator_merged.SLDASM9/: CMakeLists.txt  package.xml  starlink_space_manipulator_merged.SLDASM9.urdf
src/assets/urdf/starlink_space_manipulator_merged.SLDASM9/config/: joint_names_starlink_space_manipulator_merged.SLDASM9.yaml
src/assets/urdf/starlink_space_manipulator_merged.SLDASM9/launch/: display.launch  gazebo.launch
src/assets/urdf/starlink_space_manipulator_merged.SLDASM9/meshes/: starlink_space_manipulator_Finger1_2_Link.STL  starlink_space_manipulator_Finger2_1_Link.STL  starlink_space_manipulator_Upper_arm_Link_1.STL
src/assets/urdf/starlink_space_manipulator_merged.SLDASM9/urdf/: starlink_space_manipulator_merged.SLDASM9.csv  starlink_space_manipulator_merged.SLDASM9.urdf
src/configs/: asset_configs.py  config_franka.py  config_satellite.py  config_satellite1.py  config_starlink.py  config_starlink_manipulator.py  configs.py
src/controllers/: backend.py  keyboard_controller.py  pid.py  smooth_IK_solver.py
src/envs/: genesis_env.py
src/robots/: franka.py  manipulator.py  merge.py  robot.py  satellite_manipulator.py
src/sensors/: timer.py  wrist_camera.py
src/tasks/: RL_task.py  RL_task_cpu_backup.py  RL_task_parallel.py  task.py  (+5 more)
(+120 files in other folders)
